Effectué les dernières modifications pour améliorer l'application et corriger les erreurs.

--- a/templates/accueil-back.html.twig
+++ b/templates/accueil-back.html.twig
@@ -93,7 +93,7 @@
 <body>
 <h1>Bienvenue sur Zoo Arcadia !</h1>
 <p>Plongez au cœur de la biodiversité et explorez notre engagement pour la conservation de la nature et la protection des espèces rares. Profitez d'une visite inoubliable et éducative à travers nos habitats.</p>
-<a href="https://127.0.0.1:8000/api/doc" class="explore-button">
+<a href="{{ path('nelmio_api_doc_controller.swagger_ui') }}" class="explore-button">
     <img src="https://img.icons8.com/ios-filled/50/ffffff/document.png" alt="Documentation Icon">
     Explorez notre documentation API
 </a>
